Cambio de footer de flex a grid

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section class="contenedor">
             <section id="intro">
                 <h2>EDITOLINE - Contracultura ilustrada</h2>
-                <p>Somos una editorial de revistas ilustradas dedicada al impulso de talento under, nuevos y emergentes, con un enfoque especial en el cómic, el manga y las narrativas gráficas contemporáneas. Nacemos como una plataforma pensada para ofrecer espacios reales de visibilidad a artistas que crean desde los márgenes, apostando por propuestas auténticas y arriesgadas.</p>
+                <p>Somos una editorial de revistas ilustradas dedicada al impulso de talento <span lang="en">under</span>, nuevos y emergentes, con un enfoque especial en el cómic, el manga y las narrativas gráficas contemporáneas. Nacemos como una plataforma pensada para ofrecer espacios reales de visibilidad a artistas que crean desde los márgenes, apostando por propuestas auténticas y arriesgadas.</p>
                 <p>Nuestra curaduría se basa en la originalidad, la intención y la fuerza del discurso visual, priorizando obras que se alejan de las fórmulas dominantes y de las tendencias convencionales. Buscamos amplificar géneros, estilos y voces que suelen quedar opacados, construyendo un catálogo diverso que dialogue con la ilustración, la narrativa gráfica y la experimentación artística.</p>
                 <button>Enviar Publicación</button>
             </section>
@@ -237,6 +237,7 @@
                 <ul>
                     <li><a href="#">Sobre nosotros</a></li>
                     <li><a href="#">Novedades</a></li>
+                    <li><a href="#">Protección de datos</a></li>
                 </ul>
             </div>
             <div>
@@ -244,6 +245,8 @@
                 <ul>
                     <li><a href="#">Red Social</a></li>
                     <li><a href="#">Red Social</a></li>
+                    <li><a href="#">Red Social</a></li>
+
                 </ul>
             </div>
         </div>
