--- a/talent.html
+++ b/talent.html
@@ -49,10 +49,8 @@
                     <img src="./img/BM3.jpeg" alt="Fotografía de José Salazar en presentación en directo">
                 </figure>
                 <div>
-                    <h3>Nombre</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam numquam a commodi eveniet quia repellendus nulla, mollitia eius atque excepturi reiciendis at, nobis adipisci saepe, consequuntur ipsa sint aliquam pariatur!</p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam numquam a commodi eveniet quia repellendus nulla, mollitia eius atque excepturi reiciendis at, nobis adipisci saepe, consequuntur ipsa sint aliquam pariatur!</p><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam numquam a commodi eveniet quia repellendus nulla, mollitia eius atque excepturi reiciendis at, nobis adipisci saepe, consequuntur ipsa sint aliquam pariatur!</p>
-                    
+                    <h3>José Salazar -AKA- Black Mist</h3>
+                    <p>Productor musical, Dj y promotor de propuestas y eventos dentro del circuito electrónico alternativo. Actualmente colabora en diferentes proyectos, motivado por la experimentación de los límites del sonido y la imagen como herramienta de disrupción cognitiva. </p>                    
                 </div>
             </article>
             <!-- SEGUNDO TALENTO -->
