Cambios menores en footer

--- a/contacto.html
+++ b/contacto.html
@@ -93,15 +93,17 @@
             <div>
                 <h3>COMPAÑIA</h3>
                 <ul>
-                    <li><a href="#">Sobre EDITOLINE</a></li>
+                    <li><a href="#">Sobre nosotros</a></li>
                     <li><a href="#">Novedades</a></li>
+                    <li><a href="#">Política de privacidad</a></li>
                 </ul>
             </div>
             <div>
                 <h3>CONECTA</h3>
                 <ul>
-                    <li><a href="#">REDES</a></li>
-                    <li><a href="#">REDES</a></li>
+                    <li><a href="#">Red Social</a></li>
+                    <li><a href="#">Red Social</a></li>
+                    <li><a href="#">Red Social</a></li>
                 </ul>
             </div>
         </div>
