--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <ul>
                     <li><a href="#">Sobre nosotros</a></li>
                     <li><a href="#">Novedades</a></li>
-                    <li><a href="#">Protección de datos</a></li>
+                    <li><a href="#">Política de privacidad</a></li>
                 </ul>
             </div>
             <div>
@@ -246,7 +246,6 @@
                     <li><a href="#">Red Social</a></li>
                     <li><a href="#">Red Social</a></li>
                     <li><a href="#">Red Social</a></li>
-
                 </ul>
             </div>
         </div>
