Implementacion de truco del check box para ocultar y mostrar el nav al hacer click en menu hamburguesa

--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,8 @@
     <!-- Menú de navegación -->
     <nav>
         <p>EDITOLINE</p>
-        <span class="material-symbols-outlined">menu</span>
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="material-symbols-outlined">menu</label>
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="catalogo.html">Catálogo</a></li>
