--- a/contacto.html
+++ b/contacto.html
@@ -46,30 +46,30 @@
         <section>
         <h2>CONTACTA CON NOSOTROS</h2>
         <div> 
-        <p>Puedes enviarnos tu proyecto rellenando todos los campos. Contactaremos contigo lo antes posible.</p>
+            <p>Puedes enviarnos tu proyecto rellenando todos los campos. Contactaremos contigo lo antes posible.</p>
             <form action="#" method="post" name="formulario-contacto" id="formulario-contacto" enctype="multipart/form-data">
-                <fieldset>
-                    <ul>
-                        <li>
-                            <label id="nombre">Nombre</label>
-                            <input type="text" name="nombre" placeholder="Nombre" >
-                        </li>
-                        <li>
-                            <label id="apellido">Apellido</label>
-                            <input type="text" name="apellido" placeholder="Apellido">
-                        </li>
-                        <li>
-                            <label id="correo">E-Mail</label>
-                            <input type="email" name="correo" placeholder="ejemplo@ejemplo.com">
-                        </li>
-                        <li>
-                        <label for="info">Mensaje</label>
-                        <textarea name="info" id="info" cols="80" rows="10"></textarea>
-                        </li>
-                    </ul>
-                        <button type="submit">Enviar formulario</button>
-                </fieldset>
-            </form>
+                    <fieldset>
+                        <ul>
+                            <li>
+                                <label id="nombre">Nombre</label>
+                                <input type="text" name="nombre" placeholder="Nombre" >
+                            </li>
+                            <li>
+                                <label id="apellido">Apellido</label>
+                                <input type="text" name="apellido" placeholder="Apellido">
+                            </li>
+                            <li>
+                                <label id="correo">E-Mail</label>
+                                <input type="email" name="correo" placeholder="ejemplo@ejemplo.com">
+                            </li>
+                            <li>
+                            <label for="info">Mensaje</label>
+                            <textarea name="info" id="info" cols="80" rows="10"></textarea>
+                            </li>
+                        </ul>
+                            <button type="submit">Enviar formulario</button>
+                    </fieldset>
+                </form>
             </div>
         </section>
 
@@ -81,7 +81,7 @@
                     <p>Dirección:</p>
                     <p>CIFO Barcelona - La Violeta</p>
                     <p>Plaça Comte de Sert, 25</p>
-                    <p>C.P 08035 (Barcelona)</p>
+                    <p>C.P: 08035 (Barcelona)</p>
                 </address>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.0381415084403!2d2.134054!3d41.4166907!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4981b5fdca4b1%3A0x35e8d1d280af19bd!2sCentre%20d&#39;Innovaci%C3%B3%20i%20Formaci%C3%B3%20Ocupacional%20(CIFO)%20de%20Barcelona%20La%20Violeta!5e0!3m2!1ses!2ses!4v1770487015348!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
