update de pagina de Talentos

--- a/talent.html
+++ b/talent.html
@@ -52,7 +52,9 @@
                 </figure>
                 <div>
                     <h3>Nzinga Mbande</h3>
-                    <p>Artista, programadora web, productora y activista afrofeminista. </p>
+                    <p>Ilustradora, desarrolladora web, productora musical y activista afrofeminista. Colaboradora de proyectos como Conciencia Afro, fundadora del Colectivo Afrofeminista EFAE.</p>
+                    <p>Ha colaborado en el proyecto EDITOLINE en el desarrollo conceptual, diseño y código del sitio web.</p>   
+
                 </div>
             </article>
                         <article class="talento">
