Cambios en footer, estructuras de html section >article en index.html, cambio de iframe en noticias por video, agrego metadescription especifica para cada pagina

--- a/catalogo.html
+++ b/catalogo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Nueva editorial, dedicada a publicar libros y novelas gráficas de talentos nuevos y emergentes enfocada en narrativas alternativas">    
+    <meta name="description" content="Catalogo por categorías de publicación de EDITOLINE.">    
     <title>Catálogo</title>
     <!-- Google ICONS // Menú de hamburguesa-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu">
@@ -49,7 +49,7 @@
                     <button class="boton-favorito">&#x2661;</button>
                     <img src="./img/happy-cover.jpg" alt="">
                 </figure>
-                <!-- Resumen/Nombe/Autor -->
+                <!-- Resumen/Nombre/Autor -->
                 <div>
                     <p>Bajo el puente</p>
                     <p><small>Nzinga Mbande</small></p>
@@ -68,7 +68,7 @@
                     <button class="boton-favorito">&#x2661;</button>
                     <img src="./img/happy-cover.jpg" alt="">
                 </figure>
-                <!-- Resumen/Nombe/Autor -->
+                <!-- Resumen/Nombre/Autor -->
                 <div>
                     <p>Bajo el puente</p>
                     <p><small>Nzinga Mbande</small></p>
@@ -87,7 +87,7 @@
                     <button class="boton-favorito">&#x2661;</button>
                     <img src="./img/happy-cover.jpg" alt="">
                 </figure>
-                <!-- Resumen/Nombe/Autor -->
+                <!-- Resumen/Nombre/Autor -->
                 <div>
                     <p>Bajo el puente</p>
                     <p><small>Nzinga Mbande</small></p>
@@ -111,7 +111,7 @@
                     <button class="boton-favorito">&#x2661;</button>
                     <img src="./img/CURE-cover.jpg" alt="">
                 </figure>
-                <!-- Resumen/Nombe/Autor -->
+                <!-- Resumen/Nombre/Autor -->
                 <div>
                     <p>Bajo el puente</p>
                     <p><small>Nzinga Mbande</small></p>
@@ -130,7 +130,7 @@
                     <button class="boton-favorito">&#x2661;</button>
                     <img src="./img/CURE-cover.jpg" alt="">
                 </figure>
-                <!-- Resumen/Nombe/Autor -->
+                <!-- Resumen/Nombre/Autor -->
                 <div>
                     <p>Bajo el puente</p>
                     <p><small>Nzinga Mbande</small></p>
@@ -149,7 +149,7 @@
                     <button class="boton-favorito">&#x2661;</button>
                     <img src="./img/CURE-cover.jpg" alt="">
                 </figure>
-                <!-- Resumen/Nombe/Autor -->
+                <!-- Resumen/Nombre/Autor -->
                 <div>
                     <p>Bajo el puente</p>
                     <p><small>Nzinga Mbande</small></p>
@@ -168,7 +168,7 @@
                     <button class="boton-favorito">&#x2661;</button>
                     <img src="./img/CURE-cover.jpg" alt="">
                 </figure>
-                <!-- Resumen/Nombe/Autor -->
+                <!-- Resumen/Nombre/Autor -->
                 <div>
                     <p>Bajo el puente</p>
                     <p><small>Nzinga Mbande</small></p>
@@ -191,7 +191,7 @@
                     <button class="boton-favorito">&#x2661;</button>
                     <img src="./img/HYUKHYUK-cover.jpg" alt="">
                 </figure>
-                <!-- Resumen/Nombe/Autor -->
+                <!-- Resumen/Nombre/Autor -->
                 <div>
                     <p>Bajo el puente</p>
                     <p><small>Nzinga Mbande</small></p>
@@ -210,7 +210,7 @@
                     <button class="boton-favorito">&#x2661;</button>
                     <img src="./img/HYUKHYUK-cover.jpg" alt="">
                 </figure>
-                <!-- Resumen/Nombe/Autor -->
+                <!-- Resumen/Nombre/Autor -->
                 <div>
                     <p>Bajo el puente</p>
                     <p><small>Nzinga Mbande</small></p>
@@ -229,7 +229,7 @@
                     <button class="boton-favorito">&#x2661;</button>
                     <img src="./img/HYUKHYUK-cover.jpg" alt="">
                 </figure>
-                <!-- Resumen/Nombe/Autor -->
+                <!-- Resumen/Nombre/Autor -->
                 <div>
                     <p>Bajo el puente</p>
                     <p><small>Nzinga Mbande</small></p>
@@ -248,7 +248,7 @@
                     <button class="boton-favorito">&#x2661;</button>
                     <img src="./img/HYUKHYUK-cover.jpg" alt="">
                 </figure>
-                <!-- Resumen/Nombe/Autor -->
+                <!-- Resumen/Nombre/Autor -->
                 <div>
                     <p>Bajo el puente</p>
                     <p><small>Nzinga Mbande</small></p>
@@ -267,24 +267,22 @@
 
     <!-- PIE DE PÁGINA -->
     <footer>
-        <div id="contenedor-footer">
-            <h2>EDITOLINE</h2>
-            <div>
-                <h3>COMPAÑIA</h3>
-                <ul>
-                    <li><a href="#">Sobre nosotros</a></li>
-                    <li><a href="#">Novedades</a></li>
-                    <li><a href="#">Política de privacidad</a></li>
-                </ul>
-            </div>
-            <div>
-                <h3>CONECTA</h3>
-                <ul>
-                    <li><a href="#">Red Social</a></li>
-                    <li><a href="#">Red Social</a></li>
-                    <li><a href="#">Red Social</a></li>
-                </ul>
-            </div>
+        <h2>EDITOLINE</h2>
+        <div>
+            <h3>COMPAÑIA</h3>
+            <ul>
+                <li><a href="#">Sobre nosotros</a></li>
+                <li><a href="#">Novedades</a></li>
+                <li><a href="#">Política de privacidad</a></li>
+            </ul>
+        </div>
+        <div>
+            <h3>CONECTA</h3>
+            <ul>
+                <li><a href="#">Red Social</a></li>
+                <li><a href="#">Red Social</a></li>
+                <li><a href="#">Red Social</a></li>
+            </ul>
         </div>
         <p><small>&copy;2026 Proyecto para CIFO La Violeta de Jose Salazar y Nzinga Mbande</small></p>
     </footer>
