--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Nueva editorial, dedicada a publicar libros y novelas gráficas de talentos nuevos y emergentes enfocada en narrativas alternativas">    
+    <meta name="description" content="Formulario para que los artistas interesados en participar en EDITOLINE envien sus propuestas a revisión, incluye mapa con ubicación de las oficinas de EDITOLINE e información de contacto.">    
     <title>Contacto</title>
     <!-- Google ICONS // Menú de hamburguesa-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu">
@@ -51,16 +51,16 @@
                     <fieldset>
                         <ul>
                             <li>
-                                <label id="nombre">Nombre</label>
-                                <input type="text" name="nombre" placeholder="Nombre" >
+                                <label for="nombre">Nombre</label>
+                                <input type="text" name="nombre" id="nombre" placeholder="Nombre" >
                             </li>
                             <li>
-                                <label id="apellido">Apellido</label>
-                                <input type="text" name="apellido" placeholder="Apellido">
+                                <label for="apellido">Apellido</label>
+                                <input type="text" name="apellido" id="apellido" placeholder="Apellido">
                             </li>
                             <li>
-                                <label id="correo">E-Mail</label>
-                                <input type="email" name="correo" placeholder="ejemplo@ejemplo.com">
+                                <label for="correo">E-Mail</label>
+                                <input type="email" name="correo" id="correo" placeholder="ejemplo@ejemplo.com">
                             </li>
                             <li>
                             <label for="info">Mensaje</label>
@@ -90,24 +90,22 @@
 
     <!-- PIE DE PÁGINA -->
     <footer>
-        <div id="contenedor-footer">
-            <h2>EDITOLINE</h2>
-            <div>
-                <h3>COMPAÑIA</h3>
-                <ul>
-                    <li><a href="#">Sobre nosotros</a></li>
-                    <li><a href="#">Novedades</a></li>
-                    <li><a href="#">Política de privacidad</a></li>
-                </ul>
-            </div>
-            <div>
-                <h3>CONECTA</h3>
-                <ul>
-                    <li><a href="#">Red Social</a></li>
-                    <li><a href="#">Red Social</a></li>
-                    <li><a href="#">Red Social</a></li>
-                </ul>
-            </div>
+        <h2>EDITOLINE</h2>
+        <div>
+            <h3>COMPAÑIA</h3>
+            <ul>
+                <li><a href="#">Sobre nosotros</a></li>
+                <li><a href="#">Novedades</a></li>
+                <li><a href="#">Política de privacidad</a></li>
+            </ul>
+        </div>
+        <div>
+            <h3>CONECTA</h3>
+            <ul>
+                <li><a href="#">Red Social</a></li>
+                <li><a href="#">Red Social</a></li>
+                <li><a href="#">Red Social</a></li>
+            </ul>
         </div>
         <p><small>&copy;2026 Proyecto para CIFO La Violeta de Jose Salazar y Nzinga Mbande</small></p>
     </footer>
