--- a/talent.html
+++ b/talent.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Nueva editorial, dedicada a publicar libros y novelas gráficas de talentos nuevos y emergentes enfocada en narrativas alternativas">
+    <meta name="description" content="Breves reseñas sobre los artistas nuevos que participan en el la propuesta de EDITOLINE">
     <title>Nuevos talentos</title>
     <!-- Google ICONS // Menú de hamburguesa-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu">
@@ -46,7 +46,7 @@
             <h2>Talentos</h2>
             <!-- SEGUNDO TALENTO -->
             <article class="talento">
-                <h2>Nombre</h2>
+                <h3>Nombre</h3>
                 <figure>
                     <img src="./img/me-cover.jpg" alt="Fotografía de José Salazar en presentación en directo">
                 </figure>
@@ -57,8 +57,8 @@
 
                 </div>
             </article>
-                        <article class="talento">
-                <h2>Nombre</h2>
+            <article class="talento">
+                <h3>Nombre</h3>
                 <figure>
                     <img src="./img/BM3.jpeg" alt="Fotografía de José Salazar en presentación en directo">
                 </figure>
@@ -70,28 +70,27 @@
                 </div>
             </article>
             <!-- TERCER TALENTO -->
+        </section>
     </main>
 
     <!-- PIE DE PÁGINA -->
     <footer>
-        <div id="contenedor-footer">
-            <h2>EDITOLINE</h2>
-            <div>
-                <h3>COMPAÑIA</h3>
-                <ul>
-                    <li><a href="#">Sobre nosotros</a></li>
-                    <li><a href="#">Novedades</a></li>
-                    <li><a href="#">Política de privacidad</a></li>
-                </ul>
-            </div>
-            <div>
-                <h3>CONECTA</h3>
-                <ul>
-                    <li><a href="#">Red Social</a></li>
-                    <li><a href="#">Red Social</a></li>
-                    <li><a href="#">Red Social</a></li>
-                </ul>
-            </div>
+        <h2>EDITOLINE</h2>
+        <div>
+            <h3>COMPAÑIA</h3>
+            <ul>
+                <li><a href="#">Sobre nosotros</a></li>
+                <li><a href="#">Novedades</a></li>
+                <li><a href="#">Política de privacidad</a></li>
+            </ul>
+        </div>
+        <div>
+            <h3>CONECTA</h3>
+            <ul>
+                <li><a href="#">Red Social</a></li>
+                <li><a href="#">Red Social</a></li>
+                <li><a href="#">Red Social</a></li>
+            </ul>
         </div>
         <p><small>&copy;2026 Proyecto para CIFO La Violeta de Jose Salazar y Nzinga Mbande</small></p>
     </footer>
