Agrego media query para landscape

--- a/editoline/contacto.html
+++ b/editoline/contacto.html
@@ -47,7 +47,7 @@
             <section>
             <h2>ENVIA TU PROPUESTA</h2>
             <div> 
-                <p>Envianos una descripción de tu propuesta artística y apunta tus datos de contacto, nuestro equipo te contactará a la brevedad posible.</p>
+                <p>Envianos una descripción de tu propuesta artística y apunta tus datos, nuestro equipo te contactará a la brevedad posible.</p>
                 <form action="#" method="post" name="formulario-contacto" id="formulario-contacto" enctype="multipart/form-data">
                         <fieldset>
                             <ul>
