--- a/editoline/index.html
+++ b/editoline/index.html
@@ -46,7 +46,7 @@
                 <h2>EDITOLINE - Contracultura ilustrada</h2>
                 <p>Somos una editorial de revistas ilustradas dedicada al impulso de talento <span lang="en">under</span>, nuevos y emergentes, con un enfoque especial en el cómic, el manga y las narrativas gráficas contemporáneas. Nacemos como una plataforma pensada para ofrecer espacios reales de visibilidad a artistas que crean desde los márgenes, apostando por propuestas auténticas y arriesgadas.</p>
                 <p>Nuestra curaduría se basa en la originalidad, la intención y la fuerza del discurso visual, priorizando obras que se alejan de las fórmulas dominantes y de las tendencias convencionales. Buscamos amplificar géneros, estilos y voces que suelen quedar opacados, construyendo un catálogo diverso que dialogue con la ilustración, la narrativa gráfica y la experimentación artística.</p>
-                <a class="boton-enlace" href="contacto.html" target="_blank" >Enviar publicación</a>
+                <a class="boton-enlace" href="contacto.html">Enviar publicación</a>
             </article>
                 <h2 lang="en">Top Sellers</h2>
             <article class="tarjeta-revista">
