--- a/editoline/index.html
+++ b/editoline/index.html
@@ -35,6 +35,8 @@
             <img src="./assets/images/RAY-banner.webp" alt="Ilustración- Ray por Nzinga Mbande" id="ray">
             <img src="./assets/images/blue-banner.webp" alt="Ilustración- Blue por Nzinga Mbande" id="blue">
             <img src="./assets/images/shila-banner.webp" alt="Ilustración- Shila por Nzinga Mbande" id="shila">
+            <img src="./assets/images/YOOAHN.banner.webp" alt="Ilustración- Shila por Nzinga Mbande" id="yoo">
+
         </div>
         <h1 lang="en">EDITOR'S PICK</h1>
     </header>
