agrego iframe con cancion y le doy estilos

--- a/editoline/noticias.html
+++ b/editoline/noticias.html
@@ -61,11 +61,11 @@
                 <a class="boton-enlace" href="https://graffica.info/nace-ilustrazioaren-eguna-el-dia-de-la-ilustracion-vasca/?_gl=1*1okez45*_up*MQ..*_ga*MTkyOTExMDA0Ny4xNzcwNzcwMDYy*_ga_KLZRFESCEH*czE3NzA3NzAwNjEkbzEkZzAkdDE3NzA3NzAwNjEkajYwJGwwJGgw" target="_blank" >Leer más</a>
             </article>
             <article class="noticia">
-                <h3>Cambiar los pinceles por 'prompts': cómo el uso de la IA está revolucionando el mundo del arte</h3>
+                <h3>Nocturno por José Salazar, la pista de intro de la futura serie animada <cite>"Ray"</cite>.</h3>
                 <figure>
-                    <img src="./assets/images/noticia-pinceles.avif" alt="Obra de Elena Pérez que muestra elementos orgánicos fusionados con componentes electrónicos">
+                   <iframe allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%253Atracks%253A2265574151&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                 </figure>
-                <p>Especialistas reflexionan sobre el impacto de esta tecnología en la creación, una práctica que genera tanto entusiasmo como controversia</p>
+                <p>Un fragmento de la colaboración de José Salazar para la serie animada <cite>"Ray"</cite> de Nzinga Mbande, un tema de Trip Hop con una atmósfera pesada y oscura.</p>
                 <a class="boton-enlace" href="https://elpais.com/tecnologia/2025-11-11/cambiar-los-pinceles-por-prompts-como-el-uso-de-la-ia-esta-revolucionando-el-mundo-del-arte.html" target="_blank" >Leer más</a>
             </article>
             <article class="noticia">
